--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,20 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    compileSdkVersion = 30
+    minSdkVersion = 16
+    targetSdkVersion = 30
+    supportLibVersion = '1.2.0'
+    coreVersion = '1.3.2'
+    recyclerViewVersion = '1.2.0-alpha06'
+    constraintLayoutVersion = '2.0.4'
+    materialVersion = '1.2.1'
+    lifecycleVersion = '2.2.0'
+    pagingVersion = '3.0.0-alpha09'
+    retrofitVersion = '2.7.2'
+    okhttpLoggingInterceptorVersion = '4.0.0'
+    coroutines = '1.3.7'
+    glideVersion = '4.11.0'
+}
