--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
+    ext.hiltVersion = '2.28-alpha'
     repositories {
         google()
         jcenter()
@@ -8,6 +9,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -40,4 +42,8 @@ ext {
     okhttpLoggingInterceptorVersion = '4.0.0'
     coroutines = '1.3.9'
     glideVersion = '4.11.0'
+
+    //hilt
+    hiltVersion = '2.28-alpha'
+    hiltJetpackVersion = '1.0.0-alpha01'
 }
