--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ ext {
     okhttpLoggingInterceptorVersion = '4.0.0'
     coroutines = '1.3.9'
     glideVersion = '4.11.0'
+    activityKtxVersion = '1.1.0'
+    fragmentKtxVersion = '1.2.5'
 
     //hilt
     hiltVersion = '2.28-alpha'
