--- a/build.gradle
+++ b/build.gradle
@@ -40,4 +40,9 @@ ext {
     okhttpLoggingInterceptorVersion = '4.0.0'
     coroutines = '1.3.9'
     glideVersion = '4.11.0'
+    activityKtxVersion = '1.1.0'
+    fragmentKtxVersion = '1.2.5'
+
+    //dagger
+    daggerVersion = '2.27'
 }
