--- a/build.gradle
+++ b/build.gradle
@@ -40,4 +40,6 @@ ext {
     okhttpLoggingInterceptorVersion = '4.0.0'
     coroutines = '1.3.9'
     glideVersion = '4.11.0'
+    //koin
+    koinVersion = '2.1.6'
 }
